--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "algorithmia": "^0.3.10",
     "fs": "0.0.1-security",
+    "googleapis": "^43.0.0",
     "ibm-watson": "^4.4.0",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.16"
